--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 	box-sizing: border-box;
 	transition: 0.75s all;
 }
-button:hover, a:hover { cursor: pointer; }
+button:hover,
+a:hover {
+	cursor: pointer;
+}
 body {
 	margin: 0;
 	padding: 0;
@@ -11,7 +14,9 @@ body {
 	min-height: 100vh;
 }
 header {
-	background-color: #FEF5E7;
+	
+	height: 10vh;
+	background-color: #fef5e7;
 	padding: 0.3rem 1em 0.1em 1em;
 	border-bottom: 2px solid orange;
 }
@@ -24,30 +29,31 @@ header nav ul {
 	padding: 0;
 	display: flex;
 	flex-direction: row;
-/* 	border-collapse: collapse; */
+	/* 	border-collapse: collapse; */
 }
 header nav ul:hover {
-/* 	border-color: black;
+	/* 	border-color: black;
 	border: 1px solid black; */
 }
 header nav li {
 	padding: 0.5em 1em;
 	border: 2px solid orange;
 	border-right: none;
-/* 	margin: 0em 0.2em; */
+	/* 	margin: 0em 0.2em; */
 	margin: 0;
 	text-align: center;
 	display: grid;
 	align-items: center;
 	font-family: Arial;
 	font-weight: bold;
-/* 	box-shadow: 0em 0em 0.3em gray; */
+	/* 	box-shadow: 0em 0em 0.3em gray; */
 }
-header nav li:hover, header nav li.selected {
+header nav li:hover,
+header nav li.selected {
 	background-color: orange;
 	cursor: pointer;
 	transform: translateY(-0.4em);
-	box-shadow: 0em        0.4em 0.3em gray;
+	box-shadow: 0em 0.4em 0.3em gray;
 }
 header nav li:first-child {
 	border-radius: 1em 0 0 1em;
@@ -59,7 +65,7 @@ header nav li:last-child {
 
 /* Main */
 main {
-	background-color: #EAEDED;
+	background-color: #eaeded;
 	flex-grow: 1;
 	padding: 1em;
 }
@@ -69,7 +75,7 @@ main h2 {
 .content {
 	padding: 0.5em 1em;
 	border-radius: 0.5em;
-	box-shadow: 0em 0em 0.4em #B2BABB;
+	box-shadow: 0em 0em 0.4em #b2babb;
 	margin-bottom: 0.5rem;
 }
 .content .search-input {
