--- a/src/index.css
+++ b/src/index.css
@@ -23,22 +23,18 @@ header h1 {
 	margin: 0;
 	text-align: center;
 }
-header nav ul {
+header nav  {
 	list-style-type: none;
 	padding: 0;
 	display: flex;
 	flex-direction: row;
 	/* 	border-collapse: collapse; */
 }
-header nav ul:hover {
-	/* 	border-color: black;
-	border: 1px solid black; */
-}
-header nav li {
+
+header nav a {
 	padding: 0.5em 1em;
 	border: 2px solid orange;
 	border-right: none;
-	/* 	margin: 0em 0.2em; */
 	margin: 0;
 	text-align: center;
 	display: grid;
@@ -47,17 +43,18 @@ header nav li {
 	font-weight: bold;
 	/* 	box-shadow: 0em 0em 0.3em gray; */
 }
-header nav li:hover,
-header nav li.selected {
+header nav a:hover,
+header nav a.selected {
 	background-color: orange;
 	cursor: pointer;
 	transform: translateY(-0.4em);
 	box-shadow: 0em 0.4em 0.3em gray;
+
 }
-header nav li:first-child {
+header nav a:first-child {
 	border-radius: 1em 0 0 1em;
 }
-header nav li:last-child {
+header nav a:last-child {
 	border-radius: 0 1em 1em 0;
 	border-right: 2px solid orange;
 }
